<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsAndResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OptionsFragment">

        <TextView
            android:id="@+id/textViewresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.299" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginBottom="47dp"
            android:text="@string/add"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.791" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginBottom="55dp"
            android:text="@string/sub"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginBottom="55dp"
            android:text="@string/multiply"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:text="@string/divide"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.893" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewresult"
            app:layout_constraintVertical_bias="0.333" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>